# gel-pkg

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: build-containers.yml  lint.yml
edgedbpkg/edgedb/: IDENTIFIER-SLOT.plist.in  IDENTIFIER-SLOT.service.in  __init__.py
edgedbpkg/edgedb/patches/: pypkg-sentencepiece__gcc8.patch
edgedbpkg/edgedb_ext/: base.py
edgedbpkg/edgedbcli/: __init__.py
edgedbpkg/libgdal/: __init__.py
edgedbpkg/libjpeg/: __init__.py
edgedbpkg/pgext/postgis/: __init__.py
edgedbpkg/postgresql/: install.list
edgedbpkg/postgresql/patches/: postgresql-edgedb__macos_15_build_fix-17.patch  postgresql-edgedb__wsl1-17.patch
edgedbpkg/pyentrypoint/rust/: Cargo.toml
edgedbpkg/pyentrypoint/rust/src/: main.rs
edgedbpkg/python/: __init__.py
edgedbpkg/python/patches/: python-edgedb__build-exe-suffix-310.patch  python-edgedb__build-exe-suffix-311.patch  python-edgedb__build-exe-suffix-312.patch  python-edgedb__build-exe-suffix-313.patch
integration/linux/: .gitattributes  find.sh  mkdockerfile.sh
integration/linux/test/: entrypoint-centos.sh  entrypoint-debian.sh  entrypoint-linux.sh  entrypoint-linuxmusl.sh
integration/linux/test-systemd/: Dockerfile-debian.template
integration/linux/test-systemd/debian-buster/: Dockerfile
integration/linux/test-systemd/ubuntu-oracular/: Dockerfile
integration/linux/test/centos-7/: Dockerfile
integration/linux/test/centos-8/: Dockerfile
integration/linux/test/debian-bookworm/: Dockerfile
integration/linux/test/debian-bullseye/: Dockerfile
integration/linux/test/debian-buster/: Dockerfile
integration/linux/test/linux-aarch64/: Dockerfile
integration/linux/test/linuxmusl-aarch64/: Dockerfile
integration/linux/test/linuxmusl-x86_64/: Dockerfile
integration/linux/test/rockylinux-9/: Dockerfile
integration/linux/test/ubuntu-bionic/: Dockerfile
integration/linux/test/ubuntu-focal/: Dockerfile
integration/linux/test/ubuntu-hirsute/: Dockerfile
integration/linux/test/ubuntu-jammy/: Dockerfile
integration/linux/test/ubuntu-noble/: Dockerfile
integration/linux/test/ubuntu-oracular/: Dockerfile
integration/linux/testpublished/: Dockerfile-debian.template
integration/linux/testpublished/debian-buster/: Dockerfile
integration/linux/upload/: Dockerfile-linux.template
integration/macos/: build.sh  test.sh
integration/win/: build.sh
server/: genrepo.toml  process_incoming.py  pyproject.toml
(+2 files in other folders)
