[project]
name = "edgedb-pkg"
dynamic = ["version"]
requires-python = '>=3.12.0'
dependencies = ["metapkg@git+https://github.com/geldata/metapkg.git"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ['black', 'ruff', 'mypy']
server = [
    "boto3-stubs[boto3,s3] ~= 1.37",
    "click ~= 8.0",
    "filelock ~= 3.18",
    "python-debian ~= 1.0",
    "semver ~= 3.0",
]

[tool.setuptools]
packages = { find = { include = ["edgedbpkg", "edgedbpkg.*"] } }
zip-safe = false

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 79
indent-width = 4
exclude = [".github"]

[tool.mypy]
files = ["edgedbpkg", "server/process_incoming.py"]
python_version = "3.12"
show_error_codes = true
strict = true
namespace_packages = true
